# Igachan-D-Fakelake

./: README.md  dockerfile  pyproject.toml
app/: hello.py
app/data/: 1.csv  1.json  2.csv  2.json  3.csv  3.json  Dataset_all.csv  Dataset_buisiness.csv  Dataset_health.csv  Dataset_living.csv  Dataset_politics.csv  Dataset_society.csv  Dataset_sports.csv  Dataset_weather and disaster.csv
app/data/csv/: Dataset_all.csv  Dataset_buisiness.csv  Dataset_health.csv  Dataset_living.csv  Dataset_politics.csv  Dataset_science and culture.csv  Dataset_society.csv  Dataset_sports.csv
app/data/json/: Dataset_all.json  Dataset_buisiness.json  Dataset_health.json  Dataset_living.json  Dataset_politics.json  Dataset_society.json  Dataset_sports.json
app/templates/: base.html  detail.html  top.html
docker/: dockerfile
